tests/integration/commands/manage/auto-uid/requirement_uids/05_error_when_requirement_has_incorrect_prefix/test.itest
RUN: cp %S/input.sdoc %S/Output/
RUN: %expect_exit 1 %strictdoc manage auto-uid %S/Output/ | filecheck %s --dump-input=fail
CHECK: error: Skipping a requirement because its UID does not match the applicable requirement prefix 'REQ-': 'WRONG_PREFIX_5'.
